force-app/main/default/objects/HOMEtracker__Property__c/fields/Camp_Member_Add_Job_Status__c.field-meta.xml
<CustomField>
    <fullName>Camp_Member_Add_Job_Status__c</fullName>
    <label>Camp Member Add Job Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Preparing</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>