force-app/main/default/objects/HOMEtracker__Property__c/fields/Campaign_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Owner_Email__c</fullName>
    <description>Mail merge field.</description>
    <formula>Campaign__r.Owner.Email</formula>
    <inlineHelpText>Mail merge field.</inlineHelpText>
    <label>Campaign Owner Email</label>
    <type>Text</type>
</CustomField>