force-app/main/default/objects/HOMEtracker__Property__c/fields/Campaign_Owner_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Owner_Full_Name__c</fullName>
    <description>Mail merge field.</description>
    <formula>Campaign__r.Owner.FirstName &amp; &quot; &quot; &amp;  Campaign__r.Owner.LastName</formula>
    <inlineHelpText>Mail merge field.</inlineHelpText>
    <label>Campaign Owner Full Name</label>
    <type>Text</type>
</CustomField>