force-app/main/default/objects/HOMEtracker__Property__c/fields/Check_Local_Pref_for_HOBOKEN_MONTCLAIR__c.field-meta.xml
<CustomField>
    <fullName>Check_Local_Pref_for_HOBOKEN_MONTCLAIR__c</fullName>
    <description>If this property is in Hoboken or Montclair, check if the applicant meets local preference criteria. Criteria can be found on the Municipality. Make sure to check if the applicant submitted their Local Preference form along with their RTV.</description>
    <formula>IF(OR(AND(Municipality_Name__r.Id = &quot;a1Fo0000001aplt&quot;, RecordTypeId__c = &quot;012o00000003bU7&quot;),Municipality_Name__r.Id = &quot;a1F1N00000340vY&quot;),

HYPERLINK(&quot;https://cgph.my.salesforce.com/00O3m000005MzPy&quot; +

&quot;?pv0=Property%20Questionnaire&quot; +

&quot;&amp;pv1=Full%20Online%20Application%20Submitted%2CPending%2CUnit%20No%20Longer%20Available&quot; +

&quot;&amp;pv2=&quot; + &quot;a0J3m00001i4Dag&quot; + 

IF(Municipality_Name__r.Id = &quot;a1Fo0000001aplt&quot;, &quot;&amp;pv3=Hoboken&quot;,
IF(Municipality_Name__r.Id = &quot;a1F1N00000340vY&quot;, &quot;&amp;pv3=Montclair&quot;,
&quot;&quot;)) +

&quot;&amp;pv4=FALSE&quot; 

, &quot;Click Here to Verify First&quot;),

IF(Municipality_Name__r.Id = &quot;a1F3m000005dIsf&quot;, &quot;Need to Setup Workforce Local Pref&quot;,

&quot;Not Applicable&quot;))</formula>
    <inlineHelpText>If this property is in Hoboken or Montclair, check if the applicant meets local preference criteria. Criteria can be found on the Municipality. Make sure to check if the applicant submitted their Local Preference form along with their RTV.</inlineHelpText>
    <label>Verify HOBOKEN &amp; MONTCLAIR Local Pref</label>
    <type>Text</type>
</CustomField>