force-app/main/default/objects/HOMEtracker__Property__c/fields/Client_Account__c.field-meta.xml
<CustomField>
    <fullName>Client_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Business Account contracted with CGP&amp;H for this development</inlineHelpText>
    <label>Client Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Client Developments</relationshipLabel>
    <relationshipName>Client_Developments</relationshipName>
    <type>Lookup</type>
</CustomField>