force-app/main/default/objects/HOMEtracker__Property__c/fields/Client_Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Client_Account_Status__c</fullName>
    <formula>IF( RecordTypeId = &apos;012o00000003bU2AAI&apos;,
Client_Account__r.Receivables_Status__c,
 Development_address__r.Client_Account__r.Receivables_Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Account Status</label>
    <type>Text</type>
</CustomField>