force-app/main/default/objects/HOMEtracker__Property__c/fields/Closing_Docs_Template__c.field-meta.xml
<CustomField>
    <fullName>Closing_Docs_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the conga template for the closing docs for this development</inlineHelpText>
    <label>Closing Docs Template</label>
    <referenceTo>APXTConga4__Conga_Template__c</referenceTo>
    <relationshipLabel>Development</relationshipLabel>
    <relationshipName>Properties</relationshipName>
    <type>Lookup</type>
</CustomField>