force-app/main/default/objects/HOMEtracker__Property__c/fields/CO_Date__c.field-meta.xml
<CustomField>
    <fullName>CO_Date__c</fullName>
    <inlineHelpText>Date of the Certificate of Occupancy</inlineHelpText>
    <label>CO Date</label>
    <type>Date</type>
</CustomField>