force-app/main/default/objects/HOMEtracker__Property__c/fields/Co_Signers_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Co_Signers_Allowed__c</fullName>
    <inlineHelpText>For rental developments only: Are co-signers allowed for the credit check?</inlineHelpText>
    <label>Co-Signers Allowed?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>