force-app/main/default/objects/HOMEtracker__Property__c/fields/COAH_Regions__c.field-meta.xml
<CustomField>
    <fullName>COAH_Regions__c</fullName>
    <label>COAH Regions</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Region 1 (Bergen, Hudson, Passaic, Sussex)</fullName>
            </value>
            <value>
                <fullName>Region 2 (Essex, Morris, Union, Warren)</fullName>
            </value>
            <value>
                <fullName>Region 3 (Hunterdon, Middlesex, Somerset)</fullName>
            </value>
            <value>
                <fullName>Region 4 (Mercer, Monmouth, Ocean)</fullName>
            </value>
            <value>
                <fullName>Region 5 (Burlington, Camden, Gloucester)</fullName>
            </value>
            <value>
                <fullName>Region 6 (Atlantic, Cape May, Cumberland, Salem)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>