force-app/main/default/objects/HOMEtracker__Property__c/fields/Confirmation_to_Delete__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_to_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This record cannot be deleted unless this field is checked.</description>
    <inlineHelpText>This record cannot be deleted unless this field is checked.</inlineHelpText>
    <label>Confirmation to Delete</label>
    <type>Checkbox</type>
</CustomField>