force-app/main/default/objects/HOMEtracker__Property__c/fields/Confirmed_all_proof_of_publication__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_all_proof_of_publication__c</fullName>
    <inlineHelpText>Date confirmed that we have proof of publication for all locations</inlineHelpText>
    <label>Confirmed all proof of publication</label>
    <type>Date</type>
</CustomField>