force-app/main/default/objects/HOMEtracker__Property__c/fields/Connect_Group_Property_Units__c.field-meta.xml
<CustomField>
    <fullName>Connect_Group_Property_Units__c</fullName>
    <formula>IF( Group_Property__c = true,
HYPERLINK(
&apos;https://cgph--c.vf.force.com/flow/Outreach_Find_Property_Matches_to_Group_Property?varDevID=&apos;&amp;Development_address__r.Id&amp;
&apos;&amp;varID=&apos;&amp;Id,
&apos;CLICK HERE&apos;,
&apos;_Blank&apos;

),
&apos;N/A&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Connect Group Property Units</label>
    <type>Text</type>
</CustomField>