force-app/main/default/objects/HOMEtracker__Property__c/fields/Consider_Local_Preference__c.field-meta.xml
<CustomField>
    <fullName>Consider_Local_Preference__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, only applicants who meet the specified local preference criteria below will appear on the EA Page. See the applicant&apos;s municipality preference for more info.</description>
    <inlineHelpText>If checked, only applicants who meet the specified local preference criteria below will appear on the EA Page. See the applicant&apos;s municipality preference for more info.</inlineHelpText>
    <label>Consider Local Preference</label>
    <type>Checkbox</type>
</CustomField>