force-app/main/default/objects/HOMEtracker__Property__c/fields/Consider_Veterans_Preference__c.field-meta.xml
<CustomField>
    <fullName>Consider_Veterans_Preference__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this field is checked, only applicants with the &quot;Veteran?&quot; field check on their Pre-Applicant will show on the EA Page.</description>
    <inlineHelpText>If this field is checked, only applicants with the &quot;Veteran?&quot; field check on their Pre-Applicant will show on the EA Page.</inlineHelpText>
    <label>Consider Veterans&apos; Preference</label>
    <type>Checkbox</type>
</CustomField>