force-app/main/default/objects/HOMEtracker__Property__c/fields/Contract_Status__c.field-meta.xml
<CustomField>
    <fullName>Contract_Status__c</fullName>
    <description>status of negotiating contract with new developer</description>
    <inlineHelpText>status of negotiating contract with new developer</inlineHelpText>
    <label>Contract Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contract REQUESTED</fullName>
            </value>
            <value>
                <fullName>Contract SENT</fullName>
            </value>
            <value>
                <fullName>Contract SIGNED</fullName>
            </value>
            <value>
                <fullName>Contract DECLINED (Using another AA)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>