force-app/main/default/objects/HOMEtracker__Property__c/fields/Controls_Extended__c.field-meta.xml
<CustomField>
    <fullName>Controls_Extended__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if affordability controls have been extended FOR NEW CREDIT ONLY.  Do not check if the extension does not qualify for new credit</inlineHelpText>
    <label>Controls Extended?</label>
    <type>Checkbox</type>
</CustomField>