force-app/main/default/objects/HOMEtracker__Property__c/fields/controls_extended_NO_NEW_CREDIT__c.field-meta.xml
<CustomField>
    <fullName>controls_extended_NO_NEW_CREDIT__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>check if this if previous AA extended controls at a resale for 30 new years but it does not count as a new credit b/c the original period did not expire.  ie, 30 year control period started on 1/1/2000, it sold on 1/1/2010 and controls were extended 30 years to 1/1/2040.    The total control period is only 40 years even though it was extended.</inlineHelpText>
    <label>controls extended NO NEW CREDIT?</label>
    <type>Checkbox</type>
</CustomField>