force-app/main/default/objects/HOMEtracker__Property__c/fields/Cooking__c.field-meta.xml
<CustomField>
    <fullName>Cooking__c</fullName>
    <label>Cooking</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Gas</fullName>
            </value>
            <value>
                <fullName>Electric</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>