force-app/main/default/objects/HOMEtracker__Property__c/fields/Created_Development_Checklist__c.field-meta.xml
<CustomField>
    <fullName>Created_Development_Checklist__c</fullName>
    <inlineHelpText>Add date created development checklist.  Change status to upcoming and enter date for target kick off call.</inlineHelpText>
    <label>Created Development Checklist</label>
    <type>Date</type>
</CustomField>