force-app/main/default/objects/HOMEtracker__Property__c/fields/Credit_Background_Check_Fee__c.field-meta.xml
<CustomField>
    <fullName>Credit_Background_Check_Fee__c</fullName>
    <inlineHelpText>For rental developments only:  The amount an applicant will be charged by the development to have their credit and/or background check run.</inlineHelpText>
    <label>Credit/Background Check Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>