force-app/main/default/objects/HOMEtracker__Property__c/fields/Credit_Background_Check_Fee_Notes__c.field-meta.xml
<CustomField>
    <fullName>Credit_Background_Check_Fee_Notes__c</fullName>
    <inlineHelpText>Enter any additional notes regarding the credit/background check and/or required deposit.  Do not put minimim credit score, instead write something like either Rentals:   Landlord&apos;s target minimum credit score is XXX.  SALES:   To qualify for a mortgage, applicants typically need a credit score of over 620. or  &quot;Landlord has own credit system to check for eligibility. Credit, rental, and employment history are taken into consideration.&quot;</inlineHelpText>
    <label>Credit/Background/Deposit Notes</label>
    <type>TextArea</type>
</CustomField>