force-app/main/default/objects/HOMEtracker__Property__c/fields/Credit_Check_Required__c.field-meta.xml
<CustomField>
    <fullName>Credit_Check_Required__c</fullName>
    <inlineHelpText>For rental developments only: Does this development require a credit check to be run?</inlineHelpText>
    <label>Credit Check Required?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>