force-app/main/default/objects/HOMEtracker__Property__c/fields/Criteria_Calculation_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Criteria_Calculation_Job_Id__c</fullName>
    <label>Criteria Calculation Job Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>