force-app/main/default/objects/HOMEtracker__Property__c/fields/Current_HR_Case_File__c.field-meta.xml
<CustomField>
    <fullName>Current_HR_Case_File__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current HR Case File</label>
    <referenceTo>HR_Case_File__c</referenceTo>
    <relationshipLabel>Properties</relationshipLabel>
    <relationshipName>Properties</relationshipName>
    <type>Lookup</type>
</CustomField>