force-app/main/default/objects/HOMEtracker__Property__c/fields/Current_Lease_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Lease_Date__c</fullName>
    <formula>HOMEtracker__Current_Owner_Service_File__r.Lease_Start_date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Lease Start Date</label>
    <type>Date</type>
</CustomField>