force-app/main/default/objects/HOMEtracker__Property__c/fields/Current_Listing_Removal_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Listing_Removal_Date__c</fullName>
    <description>Date removed from current listings.</description>
    <inlineHelpText>Date removed from current listings.</inlineHelpText>
    <label>Current Listing Removal Date</label>
    <type>Date</type>
</CustomField>