force-app/main/default/objects/HOMEtracker__Property__c/fields/Current_listings_live_at_beg__c.field-meta.xml
<CustomField>
    <fullName>Current_listings_live_at_beg__c</fullName>
    <inlineHelpText>Enter date current listings added to website at beginning of affirmative marketing period.</inlineHelpText>
    <label>Current listings live at beg</label>
    <type>Date</type>
</CustomField>