force-app/main/default/objects/HOMEtracker__Property__c/fields/Current_Outreach_Timeline__c.field-meta.xml
<CustomField>
    <fullName>Current_Outreach_Timeline__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Outreach Timeline</label>
    <referenceTo>Outreach_Timeline__c</referenceTo>
    <relationshipLabel>Properties</relationshipLabel>
    <relationshipName>Properties</relationshipName>
    <type>Lookup</type>
</CustomField>