force-app/main/default/objects/HOMEtracker__Property__c/fields/current_owner_closing_date__c.field-meta.xml
<CustomField>
    <fullName>current_owner_closing_date__c</fullName>
    <label>current owner closing date</label>
    <type>Date</type>
</CustomField>