force-app/main/default/objects/HOMEtracker__Property__c/fields/Current_Primary_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Current_Primary_Applicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Current applicant who is marked as the primary applicant for this unit.</inlineHelpText>
    <label>Current Primary Applicant</label>
    <referenceTo>Outreach_Tracking__c</referenceTo>
    <relationshipLabel>Primary Properties</relationshipLabel>
    <relationshipName>Properties</relationshipName>
    <type>Lookup</type>
</CustomField>