force-app/main/default/objects/HOMEtracker__Property__c/fields/Current_Rent_Own_Cert_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Rent_Own_Cert_Date__c</fullName>
    <formula>HOMEtracker__Current_Owner_Service_File__r.Eligibility_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Eligibility Date of the Current Owner Service File (which is also used for current renter)</inlineHelpText>
    <label>Current Rent/Own Cert Date</label>
    <type>Date</type>
</CustomField>