force-app/main/default/objects/HOMEtracker__Property__c/fields/Current_renter__c.field-meta.xml
<CustomField>
    <fullName>Current_renter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Renter</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Properties (Current renter)</relationshipLabel>
    <relationshipName>Properties3</relationshipName>
    <type>Lookup</type>
</CustomField>