force-app/main/default/objects/HOMEtracker__Property__c/fields/Custom_Pre_app_Label__c.field-meta.xml
<CustomField>
    <fullName>Custom_Pre_app_Label__c</fullName>
    <description>If you want a custom &quot;How to Apply&quot; section on this development&apos;s page on the website, enter the pre-app button label here. Example: Submit a Cooper Towers Preliminary Application</description>
    <inlineHelpText>If you want a custom &quot;How to Apply&quot; section on this development&apos;s page on the website, enter the pre-app button label here. Example: Submit a Cooper Towers Preliminary Application</inlineHelpText>
    <label>Custom Pre-app Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>