force-app/main/default/objects/HOMEtracker__Property__c/fields/Custom_Pre_app_Link__c.field-meta.xml
<CustomField>
    <fullName>Custom_Pre_app_Link__c</fullName>
    <description>If you want a custom &quot;How to Apply&quot; section on this development&apos;s page on the website, enter the pre-app link here. Example: https://dev.affordablehomesnewjersey.com/cooper-tower-pre-application/</description>
    <inlineHelpText>If you want a custom &quot;How to Apply&quot; section on this development&apos;s page on the website, enter the pre-app link here. Example: https://dev.affordablehomesnewjersey.com/cooper-tower-pre-application/</inlineHelpText>
    <label>Custom Pre-app Link</label>
    <type>Url</type>
</CustomField>