force-app/main/default/objects/HOMEtracker__Property__c/fields/Custom_Pre_app_Text__c.field-meta.xml
<CustomField>
    <fullName>Custom_Pre_app_Text__c</fullName>
    <description>If you want a custom &quot;How to Apply&quot; section on this development&apos;s page on the website, enter the how to apply text here. Example: If you are interested in homes for rent in Cooper Towers, click to submit a Cooper Towers Preliminary Submission...</description>
    <inlineHelpText>If you want a custom &quot;How to Apply&quot; section on this development&apos;s page on the website, enter the how to apply text here. Example: If you are interested in homes for rent in Cooper Towers, click to submit a Cooper Towers Preliminary Submission...</inlineHelpText>
    <label>Custom Pre-app Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>