force-app/main/default/objects/HOMEtracker__Property__c/fields/D_Image_Name_Starter__c.field-meta.xml
<CustomField>
    <fullName>D_Image_Name_Starter__c</fullName>
    <formula>Municipality_Name__r.Name + &quot;_&quot; +  Name + &quot;_DESCRIPTION&quot;</formula>
    <inlineHelpText>Copy and paste this value into the name field when uploading an image to Salesforce for this development. Make sure to replace &quot;DESCRIPTION&quot; with something like &quot;exterior&quot; to describe the image.</inlineHelpText>
    <label>Image Name Starter</label>
    <type>Text</type>
</CustomField>