force-app/main/default/objects/HOMEtracker__Property__c/fields/Date_Applicant_Certified__c.field-meta.xml
<CustomField>
    <fullName>Date_Applicant_Certified__c</fullName>
    <inlineHelpText>Date applicant certified to rent/purchase this property.</inlineHelpText>
    <label>Date Applicant Certified</label>
    <type>Date</type>
</CustomField>