force-app/main/default/objects/HOMEtracker__Property__c/fields/Date_Completed_Created_Cur_Owners_Co_Own__c.field-meta.xml
<CustomField>
    <fullName>Date_Completed_Created_Cur_Owners_Co_Own__c</fullName>
    <label>Date Completed</label>
    <type>Date</type>
</CustomField>