force-app/main/default/objects/HOMEtracker__Property__c/fields/Date_controls_extended_2__c.field-meta.xml
<CustomField>
    <fullName>Date_controls_extended_2__c</fullName>
    <description>Date controls extended from affordability documents</description>
    <label>Date Controls Extended Controls Expire</label>
    <type>Date</type>
</CustomField>