force-app/main/default/objects/HOMEtracker__Property__c/fields/Date_controls_were_extended__c.field-meta.xml
<CustomField>
    <fullName>Date_controls_were_extended__c</fullName>
    <description>Date controls were extended.  This is not the date the new control period started.  This is just the date the documents were executed.  New control period starts on the day the old control period ended.</description>
    <inlineHelpText>Date controls were extended.  This is not the date the new control period started.  This is just the date the documents were executed.  New control period starts on the day the old control period ended.</inlineHelpText>
    <label>Date controls were extended</label>
    <type>Date</type>
</CustomField>