force-app/main/default/objects/HOMEtracker__Property__c/fields/Date_First_Occupied__c.field-meta.xml
<CustomField>
    <fullName>Date_First_Occupied__c</fullName>
    <label>Date First Occupied</label>
    <type>Date</type>
</CustomField>