force-app/main/default/objects/HOMEtracker__Property__c/fields/Date_freehold_initial_sale_info_entered__c.field-meta.xml
<CustomField>
    <fullName>Date_freehold_initial_sale_info_entered__c</fullName>
    <description>Date freehold initial sale info entered by Michelle or Megan</description>
    <inlineHelpText>Date freehold initial sale info entered by Michelle or Megan</inlineHelpText>
    <label>Date freehold initial sale info entered</label>
    <type>Date</type>
</CustomField>