force-app/main/default/objects/HOMEtracker__Property__c/fields/Date_Initial_Controls_Expire__c.field-meta.xml
<CustomField>
    <fullName>Date_Initial_Controls_Expire__c</fullName>
    <inlineHelpText>Enter Date that the initial controls expire or perpetuity</inlineHelpText>
    <label>Date Initial Controls Expire</label>
    <type>Date</type>
</CustomField>