force-app/main/default/objects/HOMEtracker__Property__c/fields/Date_listings_must_go_live_on_website__c.field-meta.xml
<CustomField>
    <fullName>Date_listings_must_go_live_on_website__c</fullName>
    <inlineHelpText>Date listings must go live on NJHRC and AFHNJ to meet 60 NJHRC rule</inlineHelpText>
    <label>Date must go live on NJHRC/ website</label>
    <type>Date</type>
</CustomField>