force-app/main/default/objects/HOMEtracker__Property__c/fields/Date_marketing_last__c.field-meta.xml
<CustomField>
    <fullName>Date_marketing_last__c</fullName>
    <label>Date began marketing last vacancy</label>
    <type>Date</type>
</CustomField>