force-app/main/default/objects/HOMEtracker__Property__c/fields/Date_notified_tax_office_about_new__c.field-meta.xml
<CustomField>
    <fullName>Date_notified_tax_office_about_new__c</fullName>
    <inlineHelpText>Date notified muni tax office that we marketing affordable sale units and they should not be tax at market rate.</inlineHelpText>
    <label>Date notified tax office - Sales</label>
    <type>Date</type>
</CustomField>