force-app/main/default/objects/HOMEtracker__Property__c/fields/Date_notified_to_fill_vacancy__c.field-meta.xml
<CustomField>
    <fullName>Date_notified_to_fill_vacancy__c</fullName>
    <inlineHelpText>Enter the date the landlord authorizes CGP&amp;H to start filling vacant unit.  (This date may be early than the date we begin outreach.)</inlineHelpText>
    <label>Date notified to fill vacancy</label>
    <type>Date</type>
</CustomField>