force-app/main/default/objects/HOMEtracker__Property__c/fields/Date_of_Initial_Rental_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Initial_Rental_Pricing__c</fullName>
    <label>Date of Initial Rental Pricing</label>
    <type>Date</type>
</CustomField>