force-app/main/default/objects/HOMEtracker__Property__c/fields/Date_of_last_annual_mailing__c.field-meta.xml
<CustomField>
    <fullName>Date_of_last_annual_mailing__c</fullName>
    <label>Date of last annual mailing</label>
    <type>Date</type>
</CustomField>