force-app/main/default/objects/HOMEtracker__Property__c/fields/Date_Outreach_began__c.field-meta.xml
<CustomField>
    <fullName>Date_Outreach_began__c</fullName>
    <inlineHelpText>Auto-filled when first invitation sent from EA Page</inlineHelpText>
    <label>Date Outreach Began</label>
    <type>Date</type>
</CustomField>