force-app/main/default/objects/HOMEtracker__Property__c/fields/Date_Rec_d_Complete_ITS__c.field-meta.xml
<CustomField>
    <fullName>Date_Rec_d_Complete_ITS__c</fullName>
    <description>Enter date received completed ITS from seller</description>
    <inlineHelpText>Enter date received completed ITS from seller</inlineHelpText>
    <label>Date Rec&apos;d Complete ITS</label>
    <type>Date</type>
</CustomField>