force-app/main/default/objects/HOMEtracker__Property__c/fields/Date_to_follow_up_next_on_DR__c.field-meta.xml
<CustomField>
    <fullName>Date_to_follow_up_next_on_DR__c</fullName>
    <inlineHelpText>enter date need to check on Deed restriction again</inlineHelpText>
    <label>Date to follow-up next on DR</label>
    <type>Date</type>
</CustomField>