force-app/main/default/objects/HOMEtracker__Property__c/fields/Date_unit_info_inputed_in_AHMS__c.field-meta.xml
<CustomField>
    <fullName>Date_unit_info_inputed_in_AHMS__c</fullName>
    <inlineHelpText>Date CGP&amp;H staff inputed unit info into AHMS</inlineHelpText>
    <label>Date unit info entered in AHMS</label>
    <type>Date</type>
</CustomField>