force-app/main/default/objects/HOMEtracker__Property__c/fields/Date_unit_will_be_availalbe__c.field-meta.xml
<CustomField>
    <fullName>Date_unit_will_be_availalbe__c</fullName>
    <description>Estimated date unit will be available</description>
    <inlineHelpText>Estimated date certification for unit should be completed. (Formerly &quot;Date Unit Will be Available&quot;)</inlineHelpText>
    <label>Target Certification Date</label>
    <type>Date</type>
</CustomField>