force-app/main/default/objects/HOMEtracker__Property__c/fields/Date_utility_info_verified__c.field-meta.xml
<CustomField>
    <fullName>Date_utility_info_verified__c</fullName>
    <inlineHelpText>Utility information matched with information in master binder.</inlineHelpText>
    <label>Date utility info verified</label>
    <type>Date</type>
</CustomField>