force-app/main/default/objects/HOMEtracker__Property__c/fields/Deadline__c.field-meta.xml
<CustomField>
    <fullName>Deadline__c</fullName>
    <description>The Request to Visit Deadline that will display on the property listing thumbnail.</description>
    <inlineHelpText>The Request to Visit Deadline that will display on the property listing thumbnail.</inlineHelpText>
    <label>Request to Visit Deadline</label>
    <type>Date</type>
</CustomField>