force-app/main/default/objects/HOMEtracker__Property__c/fields/Deed_restriction_info_verified__c.field-meta.xml
<CustomField>
    <fullName>Deed_restriction_info_verified__c</fullName>
    <inlineHelpText>Verify date placed in program, purchase price, type of controls, number of years in affordability period, date controls expire.
Indicate date verified, initials, and how verified</inlineHelpText>
    <label>Deed restriction info verified</label>
    <type>TextArea</type>
</CustomField>